--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
   <div class="page-wrapper">
+    <div class="title">Calculator</div>
     <div class="calculator">
       <div class="calculator-display"></div>
       <div class="button-container">
